[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/TrapArea.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[node name="TrapArea" type="Area2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
color = Color( 1, 0, 0, 0.392157 )
polygon = PoolVector2Array( -32, -32, 32, -32, 32, -32, 32, 32, -32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EffectArea" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="EffectArea"]
shape = SubResource( 2 )

[node name="ExplosionTimer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_TrapArea_body_entered"]
[connection signal="body_entered" from="EffectArea" to="." method="_on_EffectArea_body_entered"]
[connection signal="body_exited" from="EffectArea" to="." method="_on_EffectArea_body_exited"]
